SERVER-12330 fix assert for _id query with distinct